# PaksaFinancialSystem

./: .env.example  .env.local  .env.production  .env.render  .gitignore  ACCOUNTING_MODULE_COMPLETE.md  AI_BI_IMPLEMENTATION_SUMMARY.md  BACKEND_CODE_QUALITY_FIXES.md  BUDGET_MODULE_COMPLETE.md  BUDGET_MODULE_FIXES.md  BUTTON_FUNCTIONALITY_REPORT.md  CODE_OF_CONDUCT.md  COMPLETE_ACCOUNTING_SYSTEM_REVIEW.md  COMPREHENSIVE_DATA_PERSISTENCE_ANALYSIS.md  COMPREHENSIVE_MOCK_DATA_AUDIT.md  COMPREHENSIVE_PLAN.md  COMPREHENSIVE_USER_GUIDE.md  CORRECTIVE_ACTION_PLAN.md  CRITICAL_FIXES_IMPLEMENTED.md  CRITICAL_SECURITY_ISSUES.md  CURRENT_PROJECT_STATUS.md  DASHBOARD_COMPLETION.md  DATABASE_INTEGRATION_FIXES.md  DATABASE_MODELS_FIXED.md  DATABASE_SETUP.md  DEEP_SCAN_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_VERIFICATION.md  DETAILED_NAVIGATION_TEST.md  Dockerfile  Dockerfile.render  FINAL_AUDIT_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FIXES_IMPLEMENTED.md  FORM_1099_REPORTING_IMPLEMENTATION.md  FRONTEND_AUDIT_ISSUES.md  FRONTEND_CODE_QUALITY_FIXES.md  HONEST_PROJECT_STATUS.md  HRM_MODULE_FIXES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  (+98 more)
backend/: .env.example  COPYRIGHT_HEADER.py  Dockerfile  Dockerfile.local  Dockerfile.production  EXTENDED_INTEGRATION_ISSUES.md  INTEGRATION_ANALYSIS.md  MIGRATION_GUIDE.md  MULTI_TENANT_ARCHITECTURE.md  OPTIMIZATION_REPORT.md  README.md  REMAINING_TASKS.md  add_copyright.py  alembic.ini  analyze_db_indexes.py  capture_full_error.py  capture_output.ps1  check_db.py  check_db_file.py  check_db_tables.py  check_file.py  check_gl_tables.py  (+115 more)
(+2385 files in other folders)
